syntax = "proto3";

option go_package = "github.com/monstercameron/GoGRPCBridge/examples/_shared/proto";

// A single Todo item.
message Todo {
  string id = 1;    // Unique identifier
  string text = 2;  // Todo description
  bool done = 3;    // Completion status
}

// Create
message CreateTodoRequest {
  string text = 1;
}
message CreateTodoResponse {
  Todo todo = 1;
}

// Read (List)
message ListTodosRequest {}
message ListTodosResponse {
  repeated Todo todos = 1;
}

// Update
message UpdateTodoRequest {
  string id = 1;
  string text = 2;
  bool done = 3;
}
message UpdateTodoResponse {
  Todo todo = 1;
}

// Delete
message DeleteTodoRequest {
  string id = 1;
}
message DeleteTodoResponse {
  bool success = 1;
}

// Server Streaming
message StreamTodosRequest {}
message StreamTodosResponse {
  Todo todo = 1;
}

// Client Streaming
message BulkCreateRequest {
  string text = 1;
}
message BulkCreateResponse {
  int32 created_count = 1;
}

// Bidirectional Streaming
message SyncRequest {
  oneof action {
    CreateTodoRequest create = 1;
    UpdateTodoRequest update = 2;
    DeleteTodoRequest delete = 3;
  }
}
message SyncResponse {
  oneof result {
    Todo todo = 1;
    string error = 2;
  }
}

// TodoService definition
service TodoService {
  // Unary RPCs
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
  rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
  rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
  rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
  
  // Streaming RPCs - tests browser HTTP/2 limitations
  rpc StreamTodos(StreamTodosRequest) returns (stream StreamTodosResponse);
  rpc BulkCreateTodos(stream BulkCreateRequest) returns (BulkCreateResponse);
  rpc SyncTodos(stream SyncRequest) returns (stream SyncResponse);
}
